--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -34,3 +34,5 @@ _mg:
                 invalid_username: "\"%username%\" is not valid username."
                 button:
                     submit: Submit
+            check_email: An email has been sent to %email%. It contains a link you must click to reset your password.
+            password_already_requested: The password for this user has already been requested within the last 24 hours.
