--- a/Resources/translations/validators.en.yml
+++ b/Resources/translations/validators.en.yml
@@ -1,4 +1,3 @@
-_mg:
-    user:
-        info:
-            gender.blank: Gender cannot be blank.
+_mg.user:
+    info:
+        gender.blank: Gender cannot be blank.
